--- a/app/src/main/res/layout/fragment_musicians.xml
+++ b/app/src/main/res/layout/fragment_musicians.xml
@@ -14,7 +14,7 @@
             android:id="@+id/rv_musicians"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/fab_add"
+            app:layout_constraintBottom_toTopOf="@+id/fab_add2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" >
@@ -22,7 +22,7 @@
         </androidx.recyclerview.widget.RecyclerView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_add"
+            android:id="@+id/fab_add2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
