--- a/app/src/main/res/layout/musician_in_band_list_item.xml
+++ b/app/src/main/res/layout/musician_in_band_list_item.xml
@@ -15,23 +15,15 @@
         android:gravity="center_vertical">
 
         <TextView
-            android:id="@+id/band_name"
+            android:id="@+id/musician_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Band name"
-            android:textAlignment="center"
-            android:textColor="@color/black"
             android:layout_weight="1"
             android:textSize="24sp"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/iv_edit"
-            android:layout_width="30dp"
-            android:layout_marginHorizontal="8dp"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_edit"
-            app:tint="@color/green_edit" />
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:text="Musician name"
+            android:textAlignment="center"/>
 
         <ImageView
             android:id="@+id/iv_delete"
@@ -40,6 +32,8 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/iv_delete"
             app:tint="@color/red_delete" />
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -48,22 +42,22 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/band_genre"
+            android:id="@+id/gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:layout_weight="1"
             android:textColor="@color/black"
-            android:text="band genre"/>
+            android:text="Gender"/>
 
         <TextView
-            android:id="@+id/band_formation"
+            android:id="@+id/age"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:textColor="@color/black"
             android:gravity="end"
-            android:text="formation year"/>
+            android:text="Age"/>
 
 
     </LinearLayout>
