--- a/app/src/main/res/layout/musician_list_item.xml
+++ b/app/src/main/res/layout/musician_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -7,15 +8,39 @@
     android:layout_marginHorizontal="8dp"
     android:id="@+id/item_container">
 
-    <TextView
-        android:id="@+id/musician_name"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:text="Musician name"
-        android:textAlignment="center"/>
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:id="@+id/musician_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:text="Musician name"
+            android:textAlignment="center"/>
+
+        <ImageView
+            android:id="@+id/iv_edit"
+            android:layout_width="30dp"
+            android:layout_marginHorizontal="8dp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_edit"
+            app:tint="@color/green_edit" />
+
+        <ImageView
+            android:id="@+id/iv_delete"
+            android:layout_width="30dp"
+            android:layout_marginHorizontal="8dp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/iv_delete"
+            app:tint="@color/red_delete" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
