--- a/app/src/main/res/layout/query_musician_list_item.xml
+++ b/app/src/main/res/layout/query_musician_list_item.xml
@@ -15,31 +15,26 @@
         android:gravity="center_vertical">
 
         <TextView
-            android:id="@+id/band_name"
+            android:id="@+id/musician_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Band name"
-            android:textAlignment="center"
-            android:textColor="@color/black"
             android:layout_weight="1"
             android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:text="Musician name"
+            android:textAlignment="center"/>
 
         <ImageView
-            android:id="@+id/iv_edit"
+            android:id="@+id/iv_add"
             android:layout_width="30dp"
             android:layout_marginHorizontal="8dp"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_edit"
-            app:tint="@color/green_edit" />
+            android:layout_height="30dp"
+            android:scaleType="fitXY"
+            app:srcCompat="@drawable/ic_add"
+            app:tint="@color/blue_add" />
 
-        <ImageView
-            android:id="@+id/iv_delete"
-            android:layout_width="30dp"
-            android:layout_marginHorizontal="8dp"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/iv_delete"
-            app:tint="@color/red_delete" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -48,22 +43,22 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/band_genre"
+            android:id="@+id/gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:layout_weight="1"
             android:textColor="@color/black"
-            android:text="band genre"/>
+            android:text="Gender"/>
 
         <TextView
-            android:id="@+id/band_formation"
+            android:id="@+id/age"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:textColor="@color/black"
             android:gravity="end"
-            android:text="formation year"/>
+            android:text="Age"/>
 
 
     </LinearLayout>
