SharedPreference para armazenar nome de usuario na tela de settings

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,5 +23,14 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:text="musicians" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:clickable="true"
+            android:src="@drawable/ic_settings" />
+
     </LinearLayout>
 </FrameLayout>
